<!--
  ~ Created by YSN Studio on 6/2/18 12:54 AM
  ~ Copyright (c) 2018. All rights reserved.
  ~
  ~ Last modified 6/2/18 12:43 AM
  -->

<resources>
    <string name="app_name">Dosist</string>
    <string name="overview">Overview</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="rp">Rp</string>
    <string name="_9_382">9.382</string>
    <string name="idr">IDR</string>
    <string name="income">Income</string>
    <string name="image_view_income">image view income</string>
    <string name="rp_1_492_000_idr">Rp 1.492.000 IDR</string>
    <string name="expense">Expense</string>
    <string name="image_view_expense">image view expense</string>
    <string name="rp_1_146_000_idr">Rp 1.146.000 IDR</string>
    <string name="image_view_menu_home_active">image view menu home active</string>
    <string name="image_view_menu_home_inactive">image view menu home inactive</string>
    <string name="image_view_menu_history_active">image view menu history active</string>
    <string name="image_view_menu_history_inactive">image view menu history inactive</string>
    <string name="income_format">Rp %s IDR</string>
    <string name="expense_format">Rp %s IDR</string>
    <string name="image_view_icon_category_item_transaction_detail">image view icon category item transaction detail</string>
    <string name="mar_18_2018">Mar 18, 2018</string>
    <string name="hp_iphonex_64gb">HP iPhoneX 64GB</string>
    <string name="rp_8_000_000">-Rp 8.000.000</string>
    <string name="amount_format_income">+Rp %s</string>
    <string name="amount_format_expense">-Rp %s</string>
    <string name="image_view_banner_dbs">image view banner dbs</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="_0">0</string>
    <string name="save">Save</string>
    <string name="image_view_icon_save">image view icon save</string>
    <string name="category">Category</string>
    <string name="choose_category">Choose Category</string>
    <string name="subject_is_required">Subject is required</string>
    <string name="description_is_required">Description is required</string>
    <string name="amount_is_required">Invalid Amount</string>
    <string name="category_is_required">Please, choose category</string>
    <string name="success_save_transaction">Transaction has been saved</string>
    <string name="category_name">Category name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_the_first_time_using_this_app_you_must_initial_your_money_right_now">For the first time using this app, you must initial your money right now</string>
    <string name="next">Next</string>
    <string name="image_view_arrow_drop_down_white">image view arrow drop down white</string>
    <string name="jan_18">Jan 18</string>
    <string name="about">About</string>
    <string name="image_view_about_app">image view about app</string>
    <string name="ds">Ds</string>
    <string name="developed_by_ysn_studio">Developed by\nYSN Studio</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="cancel">Cancel</string>
    <string name="strip">-</string>
    <string name="month_currently">Month Currently</string>
</resources>
