<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.ysn.dosist.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/walkway"
                android:text="@string/app_name"
                android:textColor="@color/colorWhiteLight"
                android:textSize="24sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_activity_main">

        <TextView
            android:id="@+id/text_view_label_overview_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/background_rounded_overview"
            android:fontFamily="sans-serif-condensed"
            android:paddingBottom="5dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="5dp"
            android:text="@string/overview"
            android:textColor="@color/colorWhiteLight"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linear_layout_container_overview_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_label_overview_activity_main"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/rp"
                android:textColor="@color/colorWhiteLight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/_9_382"
                android:textColor="@color/colorWhiteLight"
                android:textSize="32sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/idr"
                android:textColor="@color/colorWhiteLight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_container_income_expense_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout_container_overview_activity_main"
            android:layout_marginBottom="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/text_view_label_income_temp_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/income"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/image_view_income_activity_main"
                    android:layout_width="32dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/image_view_income"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_arrow_income_24dp" />

                <TextView
                    android:id="@+id/text_view_label_income_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/image_view_income_activity_main"
                    android:text="@string/income"
                    android:textColor="@color/colorWhiteLight" />

                <TextView
                    android:id="@+id/text_view_income_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_label_income_temp_activity_main"
                    android:layout_centerHorizontal="true"
                    android:layout_toEndOf="@+id/image_view_income_activity_main"
                    android:text="@string/rp_1_492_000_idr"
                    android:textColor="@color/colorWhiteLight" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="0dp">

                <TextView
                    android:id="@+id/text_view_label_expense_temp_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/expense"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/image_view_expense_activity_main"
                    android:layout_width="32dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:contentDescription="@string/image_view_expense"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_arrow_expense_24dp" />

                <TextView
                    android:id="@+id/text_view_label_expense_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/image_view_expense_activity_main"
                    android:text="@string/expense"
                    android:textColor="@color/colorWhiteLight" />

                <TextView
                    android:id="@+id/text_view_expense_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_view_label_expense_temp_activity_main"
                    android:layout_toEndOf="@+id/image_view_expense_activity_main"
                    android:text="@string/rp_1_146_000_idr"
                    android:textColor="@color/colorWhiteLight" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_container_transaction_detail_activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear_layout_container_income_expense_activity_main"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_detail"
                android:textColor="@color/colorWhiteLight" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_transaction_detail_activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_container_bottom_menu_bar_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_divider_menu_home_active_activity_main"
                    android:layout_width="24dp"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/tab_menu_active" />

                <ImageView
                    android:id="@+id/image_view_home_active_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_divider_menu_home_active_activity_main"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_view_menu_home_active"
                    android:src="@drawable/ic_home_active_24dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/image_view_home_inactive_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_divider_menu_home_active_activity_main"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_view_menu_home_inactive"
                    android:src="@drawable/ic_home_inactive_24dp"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_divider_menu_history_active_activity_main"
                    android:layout_width="24dp"
                    android:layout_height="3dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/tab_menu_active"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/image_view_history_active_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_divider_menu_history_active_activity_main"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_view_menu_history_active"
                    android:src="@drawable/ic_history_transaction_active_24dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/image_view_history_inactive_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/view_divider_menu_history_active_activity_main"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/image_view_menu_history_inactive"
                    android:src="@drawable/ic_history_transaction_inactive_24dp"
                    android:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_button_add_transaction_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="11dp"
            android:src="@drawable/ic_add_white_24dp"
            app:fabSize="normal" />

    </RelativeLayout>

</RelativeLayout>
